--- a/react-deploy/package.json
+++ b/react-deploy/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://narjes.github.io/",
+  "homepage": "http://narjes-al.github.io/",
   "name": "react-deploy",
   "version": "0.1.0",
   "private": true,
