--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "anya-ji",
-  "name": "anya-ji",
+  "short_name": "narjes-alzahli",
+  "name": "narjes-alzahli",
   "icons": [],
   "start_url": ".",
   "display": "standalone",
